# MessyCurves

./: .gitmodules  CMakeLists.txt  Draw.cpp  Forces.cpp  Mask.cpp  Maths.cpp  PLY.cpp  README.md  Show.cpp  from_stipples.cmd  loop.bash  messycurves.cpp  pixelscurves.cpp  stipplecurves.cpp
processing/: messycurves_random.cpp  mySketch.js
stipples/: ima_min1_max16.0001.ply  ima_min1_max3.0001.ply  ima_min1_max32.0001.ply  ima_min1_max6.0001.ply
